Make a kinda working Wordpress Docker installation

--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     depends_on:
       - database
     volumes:
-      - ./:/usr/share/nginx/html
+      - wordpress:/usr/share/nginx/html
 
 volumes:
   db_data: {}
+  wordpress: {}
