--- a/wordpress/docker/Dockerfile
+++ b/wordpress/docker/Dockerfile
@@ -4,4 +4,7 @@ WORKDIR /usr/share/nginx/html
 
 RUN apt-get update \
     && apt-get upgrade -y
+RUN apt-get install wget
+RUN wget https://wordpress.org/latest.tar.gz && tar xvfz latest.tar.gz && mv wordpress/* ./ && rmdir wordpress
+
 RUN docker-php-ext-install mysqli pdo pdo_mysql
