--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "80:80"
     links:
       - database
+    working_dir: /usr/share/nginx/html
     volumes:
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./:/usr/share/nginx/html
@@ -29,8 +30,7 @@ services:
     depends_on:
       - database
     volumes:
-      - wordpress:/usr/share/nginx/html
+      - ./:/usr/share/nginx/html
 
 volumes:
   db_data: {}
-  wordpress: {}
