--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -1,36 +1,39 @@
-version: "3"
+version: "3.9"
 
 services:
-  webserver:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    links:
-      - database
-    working_dir: /usr/share/nginx/html
+  wordpress:
+    container_name: wordpress
+    image: wordpress:php8.1-apache
+    restart: always
+    stdin_open: true
+    tty: true
+    environment:
+      WORDPRESS_DB_HOST: mariadb
+      WORDPRESS_DB_USER: db_user
+      WORDPRESS_DB_PASSWORD: db_user_pass
+      WORDPRESS_DB_NAME: wordpress
     volumes:
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./:/usr/share/nginx/html
-
-  database:
+#      - wordpress_data:/var/www/html
+      - ./wordpress:/var/www/html
+  mariadb:
+    container_name: mariadb
     image: mariadb
+    restart: always
+    environment:
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: db_user
+      MYSQL_PASSWORD: db_user_pass
+      MYSQL_RANDOM_ROOT_PASSWORD: 'password123'
     volumes:
       - db_data:/var/lib/mysql
-    restart: always
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    restart: unless-stopped
     ports:
-      - "3306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: password123
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: password123
-
-  php:
-    build: docker
-    depends_on:
-      - database
+      - 80:80
     volumes:
-      - ./:/usr/share/nginx/html
-
+      - ./docker/nginx/conf:/etc/nginx/conf.d
 volumes:
-  db_data: {}
+  db_data:
+#  wordpress_data:
