--- a/wordpress/docker/nginx.conf
+++ b/wordpress/docker/nginx.conf
@@ -11,10 +11,8 @@ server {
         try_files $uri /index.php?query_string;
     }
 
-    #error_page  404              /404.html;
+    error_page  404              /404.html;
 
-    # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
@@ -22,9 +20,9 @@ server {
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
     #
-#     location ~ \.php$ {
-#         proxy_pass   http://php;
-#     }
+    location ~ \.php$ {
+        proxy_pass   http://php;
+    }
 
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
@@ -39,7 +37,7 @@ server {
     # deny access to .htaccess files, if Apache's document root
     # concurs with nginx's one
     #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
+#     location ~ /\.ht {
+#        deny  all;
+#     }
 }
